--- a/basket/templates/basket/view_basket.html
+++ b/basket/templates/basket/view_basket.html
@@ -45,8 +45,8 @@
                                     {% include "basket/plant_info.html" %}
                                 </div>
                                 <div class="col-12 col-sm-6 order-sm-last">
-                                    <p class="my-0">Price Each: ${{ item.plant.price }}</p>
-                                    <p><strong>Subtotal: </strong>${{ item.plant.price | calc_subtotal:item.quantity }}</p>
+                                    <p class="my-0">Price Each: €{{ item.plant.price }}</p>
+                                    <p><strong>Subtotal: </strong>€{{ item.plant.price | calc_subtotal:item.quantity }}</p>
                                 </div>
                                 <div class="col-12 col-sm-6">
                                     {% include "basket/quantity_form.html" %}
@@ -75,13 +75,13 @@
                                         {% include "basket/plant_info.html" %}
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0">${{ item.plant.price }}</p>
+                                        <p class="my-0">€{{ item.plant.price }}</p>
                                     </td>
                                     <td class="py-3 w-25">
                                         {% include "basket/quantity_form.html" %}
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0">${{ item.plant.price | calc_subtotal:item.quantity }}</p>
+                                        <p class="my-0">€{{ item.plant.price | calc_subtotal:item.quantity }}</p>
                                     </td>
                                 </tr>
                             {% endfor %}
