--- a/basket/templates/basket/basket_total.html
+++ b/basket/templates/basket/basket_total.html
@@ -1,2 +1,3 @@
 <h6><strong>Basket Total: €{{ total|floatformat:2 }}</strong></h6>
+<h6><strong>VAT @ 23%: €{{ vat|floatformat:2 }}</strong></h6>
 <h4 class="mt-4"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
