--- a/basket/templates/basket/view_basket.html
+++ b/basket/templates/basket/view_basket.html
@@ -4,7 +4,7 @@
 
 {% block head_title %}Your Wild Carbon basket{% endblock %}
 
-{% block main_style %}main-container-absolute{% endblock %}
+{% block main_style %}main-container-offset{% endblock %}
 
 {% block description %}
     <meta name="description" content="On this page you can learn about wild carbon and what we can do for you">
@@ -16,11 +16,10 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">Shopping Basket</h2>
+                <h2 class="logo-font mb-4">Basket</h2>
                 <hr>
             </div>
         </div>
-
         <div class="row">
             <div class="col">
                 {% if basket_items %}
