--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,10 @@
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <!-- js links  -->
         <script src="https://kit.fontawesome.com/e12aa4c3b2.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+        <!-- Stripe -->
+        <script src="https://js.stripe.com/v3/"></script>
     </head>
     <body>
         <header>
@@ -172,8 +176,6 @@
                 </div>
             </section>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
         <script src="{% static 'js/libraries/jquery_3_7_0.js' %}"></script>        
         <script src="{% static 'js/wild_carbon/base.js' %}"></script>
         {% block extra_js %}
