--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -4,6 +4,10 @@
 
 {% block head_title %}Wild Carbon checkout{% endblock %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
+{% endblock %}
+
 {% block main_style %}main-container-offset{% endblock %}
 
 {% block description %}
@@ -32,7 +36,7 @@
                         <p class="mb-1 mt-0 small text-muted">Subtotal</p>
                     </div>
                 </div>
-                {% for item in bag_items %}
+                {% for item in basket_items %}
                     <div class="row">
                         <div class="col-2 mb-1">
                             <a href="{% url 'plant_detail' item.plant.id %}">
