--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -39,7 +39,7 @@
                 {% for item in basket_items %}
                     <div class="row">
                         <div class="col-2 mb-1">
-                            <a href="{% url 'plant_detail' item.plant.id %}">
+                            <a href="{% url 'plant_detail' 1 item.plant.id %}">
                                 {% if item.plant.image %}
                                     <img class="w-100" src="{{ item.product.image.url }}" alt="{{ plant.commont_name }}">
                                 {% else %}
@@ -52,7 +52,7 @@
                             <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
                         </div>
                         <div class="col-3 text-right">
-                            <p class="my-0 small text-muted">${{ item.plant.price | calc_subtotal:item.quantity }}</p>
+                            <p class="my-0 small text-muted">€{{ item.plant.price | calc_subtotal:item.quantity }}</p>
                         </div>
                     </div>
                 {% endfor %}
@@ -64,9 +64,9 @@
                         <p class="my-0">Grand Total:</p>
                     </div>
                     <div class="col-3">
-                        <p class="my-0">${{ total | floatformat:2 }}</p>
-                        <p class="my-0">${{ vat | floatformat:2 }}</p>
-                        <p class="my-0"><strong>${{ grand_total | floatformat:2 }}</strong></p>
+                        <p class="my-0">€{{ total | floatformat:2 }}</p>
+                        <p class="my-0">€{{ vat | floatformat:2 }}</p>
+                        <p class="my-0"><strong>€{{ grand_total | floatformat:2 }}</strong></p>
                     </div>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                     </fieldset>
 
                     <div class="submit-button text-right mt-5 mb-2">                    
-                        <a href="{% url 'view_baasket' %}" class="btn btn-outline-black rounded-0">
+                        <a href="{% url 'view_basket' %}" class="btn btn-outline-black rounded-0">
                             <span class="icon">
                                 <i class="fas fa-chevron-left"></i>
                             </span>
@@ -127,7 +127,7 @@
                             <span class="icon">
                                 <i class="fas fa-exclamation-circle"></i>
                             </span>
-                            <span>Your card will be charged <strong>${{ grand_total|floatformat:2 }}</strong></span>
+                            <span>Your card will be charged <strong>€{{ grand_total|floatformat:2 }}</strong></span>
                         </p>
                     </div>
                 </form>
