--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -27,7 +27,7 @@
 
         <div class="row">
             <div class="col-12 col-lg-6 order-lg-last mb-5">
-                <p class="text-muted">Order Summary ({{ product_count }})</p>
+                <p class="text-muted">Order Summary ({{ plant_count }})</p>
                 <div class="row">
                     <div class="col-7 offset-2">
                         <p class="mb-1 mt-0 small text-muted">Item</p>
@@ -41,7 +41,7 @@
                         <div class="col-2 mb-1">
                             <a href="{% url 'plant_detail' 1 item.plant.id %}">
                                 {% if item.plant.image %}
-                                    <img class="w-100" src="{{ item.product.image.url }}" alt="{{ plant.commont_name }}">
+                                    <img class="w-100" src="{{ item.plant.image.url }}" alt="{{ plant.commont_name }}">
                                 {% else %}
                                     <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ plant.common_name }}">
                                 {% endif %}
