--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,9 @@
                                 <img class="account-menu-icon" src="{% static 'static_media/icons/base_account_menu.svg' %}" alt="Open the account menu">
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end">
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'profile' %}">Your Profile</a>
+                                </li>
                                 {% if user.is_authenticated %}
                                     <li>
                                         <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
