--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -4,4 +4,39 @@
       <div>{{ message }}</div>
       <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
+  <!-- Toast template provided by Code Institute -->
+  {% if grand_total and not on_profile_page %}
+      <p class="logo-font bg-white text-black py-1">Your Basket ({{ plant_count }})</p>
+      <div class="bag-notification-wrapper">
+          {% for item in basket_items %}
+              <div class="row">
+                  <div class="col-3 my-1">
+                      {% if item.plant.image %}
+                      <img class="w-100" src="{{ item.plant.image.url }}" alt="{{ item.plant.common_name }}">
+                      {% else %}
+                      <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.plant.common_name }}">
+                      {% endif %}
+                  </div>
+                  <div class="col-9">
+                      <p class="my-0"><strong>{{ item.plant.common_name }}</strong></p>
+                      <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                  </div>
+              </div>
+          {% endfor %}
+      </div>
+      <div class="row">
+          <div class="col">
+              <strong><p class="mt-3 mb-1 text-black">
+                  Total: <span class="float-right">€{{ total|floatformat:2 }}</span>
+              </p></strong>
+              <a href="{% url 'view_basket' %}" class="btn btn-black btn-block rounded-0">
+                  <span class="text-uppercase">Go To Secure Checkout</span>
+                  <span class="icon">
+                      <i class="fas fa-lock"></i>
+                  </span>
+              </a>
+          </div>
+      </div>
+  {% endif %}
+  <!-- End of toast template provided by Code Institute -->
 </div>
